--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sketch-hyphenator",
+  "name": "Sketch Hyphenator",
   "description": "Sketch plugin that hyphenates text",
   "homepage": "https://github.com/golmakov/sketch-hyphenator",
   "author": "Aleksander Golmakov",
